k8s/10-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: turnero
spec:
  replicas: 1
  selector:
    matchLabels: { app: prometheus }
  template:
    metadata:
      labels: { app: prometheus }
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.54.1
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prom-config
              mountPath: /etc/prometheus
      volumes:
        - name: prom-config
          configMap:
            name: prom-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: turnero
spec:
  selector: { app: prometheus }
  ports:
    - port: 9090
      targetPort: 9090
      name: http
